fix: Fix to mobile overflow being visible

--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,32 @@
 /* Author: Quaid Sage */
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     background-color: rgb(34, 34, 34);
     margin: 0;
     padding: 0;
-    overflow: hidden;   
+    width: 100%;
+    height: 100%;
+}
+
+main {
+    width: 100%;
+    height: 100%;
+}
+
+#wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 #page {
     margin: 0 auto;
+    width: 100%;
+    height: 100%;
 }
 
 .no-highlight {
@@ -535,7 +554,6 @@ body {
 @media only screen and (max-width: 1000px) {
     #title pre {
         font-size: 30px;
-        background-color: red;
     }
 
     /* Nav */
@@ -609,12 +627,12 @@ body {
     #projects-list-btn-back {
         font-size: 20px;
         margin-right: 700px;
-        margin-top: 120px; 
+        margin-top: 115px; 
     }
 
     /* Project list background */
     #projects-list-background {
-        font-size: 28px;
+        font-size: 26px;
     }
     
 }
